2006-11-08
    - Multi-alias RE for PASSWORD and ALIAS

2006-11-08
    - Bugfix for MX host RE Isolation

2006-11-04
    - TARPIT directive added
    - Incoming SMTP connection metrics

2006-11-03
 - CHANGELOG added
 - libwrap #define fix, thanks Gab!

2006-10-27
 - SMTP error messages changed for postmaster
 - Leaky queue bugfix: only requeue if there's a schedule advantage
 - Added DNS, Punt, Delivery, and Dfile inode logging
 - Cleaned up DNS delivery code
 - Bugfix: Isolate R from E

2006-08-16
 - LDAP enhancements
 - Faster requing for remote up remote queues
 - Checksums for incoming SMTP content filter
 - D Rules
 - spelling errors fixed

0.6.4
 - MAIL FROM DNS Connection dropping bugfix
 - -Q works with the new queue runner
 - simta.conf bugfixes
 - RBL off by one bug fixed
 - ALIAS_FILE config option added
 - MAX_MESSAGE_SIZE dropped connection bugfix
 - command line args synched with config file
 - multiple RBL added back in

0.6.3
 - expand and receive share same address verification code
 - reject incoming messages if oversized
 - punting fixed with new queue runner
 - bugfixes

0.6.2
 - partial postmaster receive bug fix

0.6.1
 - MIN_WORK_TIME feature
 - sleep() -> nanosleep() bugfix
 - simta.conf template
 - bugfixes

0.6.0
 - new master queue runner
 - fixed simta -C bug

0.5.7
 - fix crash if DNS is down on RBL lookup
 - fix off-by-one error for failed rcpts

0.5.4
 - always do a reverse lookup of SMTP clients for information
 - BUGFIX: receive/expand parse skew fixed
 - content filter uses execve() and new environment variables
 - content filter is provided a tfile to examine
 - logging change for RBL rejection
 - BUGFIX: SMTP Auth
 - BUGFIX: SNET write hangs
 - Better SMTP error messages to client

0.5.3
 - BUGFIX: merged bugfixes

0.5.2g3
 - BUGFIX: Members-only mail leak

0.5.2g2
 - BUGFIX: bad memfree

0.5.2g
 - BUGFIX: Resetting SASL after user canceled AUTH

0.5.2f
 - Bugfixes
 - better test scripts

0.5.2e