@@ -10,6 +10,10 @@
 #
 #PUNT				HOSTNAME
 
+# Do not attempt an initial deliver of incoming SMTP mail, just queue it.
+#
+#QUEUE_INCOMING_SMTP_MAIL
+
 # Designate a directory for simta's mail queues.
 #
 #BASE_DIR			/var/spool/simta
