@@ -74,6 +74,7 @@ extern struct host_q			*simta_punt_q;
 extern struct host_q			*simta_host_q;
 extern struct envelope			*simta_env_queue;
 extern unsigned short			simta_smtp_port;
+extern int				simta_queue_incoming_smtp_mail;
 extern int				simta_leaky_queue;
 extern int				simta_use_randfile;
 extern int				simta_listen_backlog;
